--- a/sales.html
+++ b/sales.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <head></head>
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+        </nav>
+    </header>
     <main >
        <div id="seattlesales">
             
