--- a/sales.html
+++ b/sales.html
@@ -1,26 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav>
             <a href="index.html">Home</a>
         </nav>
     </header>
-    <main >
-       <div id="seattlesales">
-            
-       </div>
-       <div id="table1">
 
-       </div>
+    <main>
+        <form id="form1">
+            <fieldset>
+
+
+                <label for="location">location :</label><br>
+                <input type="text" name="" id="location">
+                <br>
+                <label for="numberofcustfield">Minimum Customers/hour :</label><br>
+                <input type="text" name="" id="numberofcustfield">
+                <br>
+                <label for="numberofmaxnumberofcustfield">Maximum Customers/hour :</label><br>
+                <input type="text" name="" id="numberofmaxnumberofcustfield">
+                <br>
+                <label for="soldcookiesfield">Average sold cookies/hour :</label><br>
+                <input type="text" name="" id="soldcookiesfield">
+                <br>
+                <input type="submit" name="" id="">
+            </fieldset>
+        </form>
+        <div id="seattlesales">
+
+        </div>
+        <div id="table1">
+
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+
+    </footer>
     <script src="js/script.js"></script>
 </body>
 
