--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </main>
 
     <footer>
-        <a href="#Map"><i class="fas fa-map-marker-alt"></i>Location</a>
+        <a href="#Map"><i class="fas fa-map-marker-alt">Location</i></a>
     </footer>
 </body>
 
