--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
     </main>
 
     <footer>
-        <a href="#Map"><i class="fas fa-map-marker-alt">Location</i></a>
+        <a href="#Map"><i class="fas fa-map-marker-alt"> <br> Seattle</i></a>
+        <a href="#Map"><i class="fas fa-map-marker-alt"> <br> Tokyo </i></a>
+        <a href="#Map"><i class="fas fa-map-marker-alt"> <br> Dubai </i></a>
     </footer>
 </body>
 
