--- a/sales.html
+++ b/sales.html
@@ -20,19 +20,19 @@
             <fieldset>
 
 
-                <label for="location">location :</label><br>
-                <input type="text" name="" id="location">
+                <label for="location">location :</label>
+                <input type="text" name="" id="location" placeholder="Branch Location">
                 <br>
-                <label for="numberofcustfield">Minimum Customers/hour :</label><br>
+                <label for="numberofcustfield">Minimum Customers/hour :</label>
                 <input type="text" name="" id="numberofcustfield">
                 <br>
-                <label for="numberofmaxnumberofcustfield">Maximum Customers/hour :</label><br>
+                <label for="numberofmaxnumberofcustfield">Maximum Customers/hour :</label>
                 <input type="text" name="" id="numberofmaxnumberofcustfield">
                 <br>
-                <label for="soldcookiesfield">Average sold cookies/hour :</label><br>
+                <label for="soldcookiesfield">Average sold cookies/hour :</label>
                 <input type="text" name="" id="soldcookiesfield">
                 <br>
-                <input type="submit" name="" id="">
+                <input type="submit" name="" id="submit-but">
             </fieldset>
         </form>
         <div id="seattlesales">
